--- a/templates/template-react-spa/public/index.html
+++ b/templates/template-react-spa/public/index.html
@@ -16,7 +16,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
-        <title>HDN Template</title>
+        <title><%= fullName %></title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
